lema - begin adding digital io, missed files.

--- a/homeassistant/components/lema/manifest.json
+++ b/homeassistant/components/lema/manifest.json
@@ -3,5 +3,5 @@
   "name": "LEMA",
   "documentation": "https://www.home-assistant.io/integrations/lema",
   "requirements": ["aiocoap==0.4b2"],
-  "codeowners": ["@chrysn"]
+  "codeowners": ["@chrysn", "@lema-io"]
 }
